--- a/Eastern.html
+++ b/Eastern.html
@@ -54,7 +54,7 @@
           <div class="row g-5">
               <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                   <div class="position-relative overflow-hidden ps-2 pt-0 h-10" style="min-height:700px;">
-                    <img class="position-absolute w-100 h-100" src="/Users/sutthidaratthongta/Documents/religious1/2.png" alt="" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="2.png" alt="" style="object-fit: cover;">
                   </div>
               </div>
               <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.5s">
