--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <p align = 'left'>มูยังไง บูชายังไงให้ได้เงิน ให้ได้ทอง ให้มีโชคลาภ</p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="/Users/sutthidaratthongta/Documents/religious1/22.png" alt="">
+                            <img class="img-fluid" src="22.png" alt="">
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2" href="">Read More</a>
                             </div>
@@ -206,7 +206,7 @@
                             <p align = 'left'>มูยังไง ให้การงานดี เจริญก้าวหน้า ผู้ใหญ่เมตตา เลื่อนตำแหน่ง</p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="/Users/sutthidaratthongta/Documents/religious1/23.png" alt="">
+                            <img class="img-fluid" src="23.png" alt="">
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2" href="">Read More</a>
                             </div>
@@ -223,7 +223,7 @@
                             <p align = 'left'>ความรัก เป็นความรู้สึก และเจตคติต่าง ๆ ซึ่งมีตั้งแต่ความชอบระหว่างบุคคล หมายถึง อารมณ์การดึงดูดและความผูกพัน (attachment) ส่วนบุคคล <br> ในบริบททางปรัชญา ความรักเป็นคุณธรรมแสดงออกซึ่งความเมตตา ความเห็นอกเห็นใจ และความเสน่หาทั้งหมดของมนุษย์ ความรักเป็นแก่นของหลายศาสนา</p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="/Users/sutthidaratthongta/Documents/religious1/21.png" alt="">
+                            <img class="img-fluid" src="21.png" alt="">
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2" href="">Read More</a>
                             </div>
@@ -239,7 +239,7 @@
                            <p align = 'left'>เป็นความเชื่อเกี่ยวกับสุขภาพอนามัยของบุคคล มีอิทธิพลต่อการเจ็บป่วย และการรักษา เมื่อเกิดการเจ็บป่วยแต่ละคนจะปฏิบัติตัวแตกต่างกัน ขึ้นอยู่กับองค์ประกอบหลายอย่าง <br>เช่น การรับรู้สาเหตุของโรค อาการและการรักษา ความรุนแรงของโรค ความเชื่อเดิม ความสนใจและค่านิยม เป็นต้น</p></left>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="/Users/sutthidaratthongta/Documents/religious1/24.png" alt="">
+                            <img class="img-fluid" src="24.png" alt="">
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2" href="">Read More</a>
                             </div>
