--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="/Users/sutthidaratthongta/Documents/religious1/7.png" alt="Image" width="950" height="750">
+                    <img class="w-100" src="7.png" alt="Image" width="950" height="750">
 
                     <div class="carousel-caption">
                         <div class="container">
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="w-100" src="/Users/sutthidaratthongta/Documents/religious1/8.png" alt="Image" width="950" height="750">
+                    <img class="w-100" src="8.png" alt="Image" width="950" height="750">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="w-100" src="/Users/sutthidaratthongta/Documents/religious1/12.png" alt="Image" width="950" height="750">
+                    <img class="w-100" src="12.png" alt="Image" width="950" height="750">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="/Users/sutthidaratthongta/Documents/religious1/14.png" alt="Image" width="950" height="750">
+                    <img class="w-100" src="14.png" alt="Image" width="950" height="750">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="/Users/sutthidaratthongta/Documents/religious1/TempleE.jpeg" alt="Image" width="950" height="750">
+                    <img class="w-100" src="TempleE.jpeg" alt="Image" width="950" height="750">
                     <div class="carousel-caption">
                       <div class="container">
                         <div class="row justify-content-center">
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="/Users/sutthidaratthongta/Documents/religious1/TempleNE.jpeg" alt="Image" width="950" height="750">
+                    <img class="w-100" src="TempleNE.jpeg" alt="Image" width="950" height="750">
                     <div class="carousel-caption">
                       <div class="container">
                         <div class="row justify-content-center">
@@ -149,8 +149,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 500px;">
-                      <img class="position-absolute w-100 h-100" src="/Users/sutthidaratthongta/Documents/religious1/RE.jpg" alt="" style="object-fit: cover;">
-                      <img class="position-absolute top-0 start-0 bg-white pe-1 pb-1" src="/Users/sutthidaratthongta/Documents/religious1/R.PNG" alt="" style="width: 150px; height: 150px;">
+                      <img class="position-absolute w-100 h-100" src="RE.jpg" alt="" style="object-fit: cover;">
+                      <img class="position-absolute top-0 start-0 bg-white pe-1 pb-1" src="R.PNG" alt="" style="width: 150px; height: 150px;">
                     </div>
                 </div>
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.5s">
