--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 500px;">
                       <img class="position-absolute w-100 h-100" src="RE.jpg" alt="" style="object-fit: cover;">
-                      <img class="position-absolute top-0 start-0 bg-white pe-1 pb-1" src="R.PNG" alt="" style="width: 150px; height: 150px;">
+                      <img class="position-absolute top-0 start-0 bg-white pe-1 pb-1" src="R.png" alt="" style="width: 150px; height: 150px;">
                     </div>
                 </div>
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.5s">
